import java.net.http.WebSocket

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'server.mokpowa'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot 스타터 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-websocket' // WebSocket 지원
    implementation 'org.springframework.boot:spring-boot-starter-web' // Spring Web 지원
    implementation 'org.springframework:spring-context:6.1.3' // Spring Context

    // WebSocket 라이브러리
    implementation 'org.java-websocket:Java-WebSocket:1.5.2' // Java-WebSocket

    // Firebase 관리 라이브러리
    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.2.0' // Firebase Admin

    // Retrofit 라이브러리
    implementation 'com.squareup.retrofit2:retrofit:2.9.0' // Retrofit
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0' // Gson Converter

    // Lombok 라이브러리
    compileOnly 'org.projectlombok:lombok' // Lombok (컴파일 시에만 필요)
    annotationProcessor 'org.projectlombok:lombok' // Lombok Annotation Processor

    // 개발 도구
    developmentOnly 'org.springframework.boot:spring-boot-devtools' // Spring Boot DevTools

    // 테스트 라이브러리
    testImplementation 'org.springframework.boot:spring-boot-starter-test' // Spring Boot 테스트 지원
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher' // JUnit Platform 런처
}


tasks.named('test') {
    useJUnitPlatform()
}